# Electronics_Store

./: .gitignore  README.md  main.py  pyproject.toml  utils.py
dir/: items.csv
tests/: test_Item.py
