[tool.poetry]
name = "pythonproject8"
version = "0.1.0"
description = ""
authors = ["Javoprav <78508571+Javoprav@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.1"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
